# mser-traffic-sign-detection

./: README.md  detector_paneles.py  evaluar_resultados.py  main.py  pyproject.toml  resultado.txt  resultado_jmbuena_road_panels.txt  utilidades.py
test_detection/: gt.txt
train_detection/: gt.txt
